# KLTN_Khanh_medicare_agent

./: .gitignore  README.md  package-lock.json  package.json
medical-rag/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
medical-rag/backend/alembic/: env.py  script.py.mako
medical-rag/backend/alembic/versions/: 001_initial.py  002_fix_image_url_text.py  003_add_refresh_tokens.py  004_multi_image_support.py  005_add_payment_orders.py  15681c5a4c91_add_nickname_to_users.py  6b650802f8b4_add_wallet_system.py  d6143a683bbc_add_refresh_tokens_table.py  dd2b5364ebd5_merge_heads.py
medical-rag/backend/app/agents/: __init__.py  chatbot_agent.py  image_medical_agent.py  medical_agent.py  orchestrator.py  rule_medical_agent.py  treatment_analysis_agent.py
medical-rag/backend/app/api/routes/: auth.py  (+7 more)
medical-rag/backend/app/core/: config.py  limiter.py  prompts.py  security.py
medical-rag/backend/app/db/: base.py  session.py
medical-rag/backend/app/models/: schemas.py
medical-rag/backend/app/services/: analysis_service.py  auth_service.py  chat_service.py  checkin_service.py  history_service.py  payment_service.py  promo_service.py  rag_service.py  vector_store.py  wallet_service.py  weather_service.py
medical-rag/backend/app/utils/: helpers.py  weather_helper.py
medical-rag/backend/scripts/: ingest_jsonl.py  ingest_pdf.py  preprocess_pdf.py  test_agents.py  test_api.py  test_search.py
medical-rag/backend/tests/: conftest.py  test_analysis.py  test_auth.py  test_chat.py  test_security.py  test_wallet.py  test_weather.py
(+90 files in other folders)
